Delete tmux-themepack module and installed tpm

--- a/shell/tmux.conf
+++ b/shell/tmux.conf
@@ -2,6 +2,12 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+# Install plugins
+set -g @plugin 'jimeh/tmux-themepack'
+
+# Set tmux theme
+set -g @themepack 'block/blue'
+
 # Improve colors
 set -g default-terminal 'screen-256color'
 
@@ -41,3 +47,5 @@ bind-key C-s send-prefix -2
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+
+run '~/.tmux/plugins/tpm/tpm'
