Added tmux theme matching vim

--- a/shell/tmux.conf
+++ b/shell/tmux.conf
@@ -3,10 +3,7 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 # Install plugins
-set -g @plugin 'jimeh/tmux-themepack'
-
-# Set tmux theme
-set -g @themepack 'block/blue'
+set -g @plugin 'tmux-plugins/tpm'
 
 # Improve colors
 set -g default-terminal 'screen-256color'
@@ -46,6 +43,11 @@ bind-key C-b send-prefix
 bind-key C-s send-prefix -2
 
 # Local config
-if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+if-shell "[ -f ~/.tmux.conf.local ]" "source ~/.tmux.conf.local"
 
+# Tmux theme from vimline
+# if-shell "[ -f $HOME/.tmux.theme ]" "source $HOME/.tmux.theme"
+if-shell "[ -f $HOME/.tmux.theme ]" "source-file $HOME/.tmux.theme"
+
+# Initialize tmux plugin manager
 run '~/.tmux/plugins/tpm/tpm'
