Moved tmux.theme

--- a/shell/tmux.conf
+++ b/shell/tmux.conf
@@ -67,7 +67,7 @@ if-shell "[ -f ~/.tmux.conf.local ]" "source ~/.tmux.conf.local"
 
 # Tmux theme from vimline
 # if-shell "[ -f $HOME/.tmux.theme ]" "source $HOME/.tmux.theme"
-if-shell "[ -f $HOME/.tmux.theme ]" "source-file $HOME/.tmux.theme"
+if-shell "[ -f $HOME/.tmux/tmux.theme ]" "source-file $HOME/.tmux/tmux.theme"
 
 # Initialize tmux plugin manager
 run '~/.tmux/plugins/tpm/tpm'
