Added mouse mode for vim anf fixed vim theme

--- a/shell/tmux.conf
+++ b/shell/tmux.conf
@@ -8,6 +8,12 @@ set-option -g set-titles on
 # Disable renaming of windows
 set-option -g allow-rename off
 
+# Enable mouse mode with m
+bind m setw -g mode-mouse on \; display 'Mouse: ON'
+
+# Disable mouse mode with M
+bind M setw -g mode-mouse off \; display 'Mouse: OFF'
+
 #set -g default-terminal screen-256color
 set -g status-keys vi
 set -g history-limit 10000
